# aiStock

./: .gitignore  README.md  debug_akshare.py  debug_akshare_alternative.py  pyproject.toml  quick_test.py  requirement.md  test_price_cache.py  ui_requirement.md
config/: config.json
doc/: FEATURES_UPDATE.md  test_search.py  快速开始.md
refInfo/: akshare.md  siliconflow.md  test.ipynb
remoteServer/: README.md  config.py  database.py  fetcher.py  main.py  models.py  pyproject.toml  requirement.md  requirements.txt  scheduler.py
remoteServer/routers/: client.py
src/: main.py  test_llm.py
src/market_data/: all_stocks.csv  calculate_indicators.py  fetch_stocks.py
src/market_data/fetch_data/: fetch.md
src/services/: llm_service.py  stock_data_service.py
src/ui/: dialogs.py  main_window.py  theme_manager.py
src/ui/tabs/: configuration.py  smart_selection.py  trading_monitor.py
src/ui/utils/: worker.py
src/ui/widgets/: __init__.py  kline_chart.py
src/utils/: config_manager.py
tests/: test_smart_selection_instantiation.py  test_trading_monitor.py
