[project]
name = "ai-stock-monitor"
version = "0.1.0"
description = "股票助手软件"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.6",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "markdown>=3.10",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "PyQt6>=6.6.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui"]

[tool.uv.workspace]
members = [
    "remoteServer",
]
